feat: Show Git SHA in Windows daemon version number

--- a/src/lib/common/CMakeLists.txt
+++ b/src/lib/common/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON)
 
 configure_file(constants.h.in constants.h @ONLY)
 
-add_library(common INTERFACE
+add_library(common
   common.h
   version.h
   IInterface.h
