build: remove extra private link to openssl::applink

--- a/src/lib/net/CMakeLists.txt
+++ b/src/lib/net/CMakeLists.txt
@@ -56,6 +56,6 @@ if(WIN32)
   target_link_libraries(
     net
     PUBLIC OpenSSL::applink
-    PRIVATE Crypt32 ws2_32 OpenSSL::applink
+    PRIVATE Crypt32 ws2_32
   )
 endif()
