chore: Move Windows event constants to constants file

--- a/src/lib/common/constants.h.in
+++ b/src/lib/common/constants.h.in
@@ -47,5 +47,7 @@ const auto kWindowsRuntimeMinor = @REQUIRED_MSVC_RUNTIME_MINOR@;
 // clang-format on
 
 const auto kWindowsRegistryKey = "SOFTWARE\\@CMAKE_PROJECT_PROPER_NAME@";
+const auto kCloseEventName = "Global\\DeskflowClose";
+const auto kSendSasEventName = "Global\\DeskflowSendSAS";
 
 #endif
