chore: rename lib/deskflow/mouse_types => lib/deskflow/MouseTypes

--- a/src/lib/deskflow/CMakeLists.txt
+++ b/src/lib/deskflow/CMakeLists.txt
@@ -119,7 +119,7 @@ add_library(${lib_name} STATIC ${PLATFORM_CODE}
   KeyMap.h
   KeyState.cpp
   KeyState.h
-  mouse_types.h
+  MouseTypes.h
   option_types.h
   PacketStreamFilter.cpp
   PacketStreamFilter.h
