chore: rename lib/gui/style_utils.h => lib/gui/StyleUtils.h

--- a/src/lib/gui/CMakeLists.txt
+++ b/src/lib/gui/CMakeLists.txt
@@ -28,7 +28,7 @@ add_library(${target} STATIC
   Messages.cpp
   Messages.h
   StringUtils.h
-  style_utils.h
+  StyleUtils.h
   styles.h
   config/IServerConfig.h
   config/Screen.cpp
