chore: rename lib/common/constants.h.in => lib/common/Constants.h.in

--- a/src/lib/common/CMakeLists.txt
+++ b/src/lib/common/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: (C) 2024 - 2025 Chris Rizzitello <sithlord48@gmail.com>
 # SPDX-License-Identifier: MIT
 
-configure_file(constants.h.in constants.h @ONLY)
+configure_file(Constants.h.in Constants.h @ONLY)
 
 add_library(common STATIC
   Common.h
@@ -20,7 +20,7 @@ add_library(common STATIC
   Settings.cpp
   QSettingsProxy.cpp
   QSettingsProxy.h
-  ${CMAKE_CURRENT_BINARY_DIR}/constants.h
+  ${CMAKE_CURRENT_BINARY_DIR}/Constants.h
 )
 
 target_link_libraries(common PUBLIC Qt6::Core)
