chore: rename lib/common/stdmap.h => lib/common/StdMap.h

--- a/src/lib/common/CMakeLists.txt
+++ b/src/lib/common/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(common STATIC
   StdExcept.h
   StdIStream.h
   StdList.h
-  stdmap.h
+  StdMap.h
   stdostream.h
   stdpost.h
   stdpre.h
