--- a/deploy/windows/wix-patch.xml.in
+++ b/deploy/windows/wix-patch.xml.in
@@ -39,6 +39,13 @@
 
     <Binary Id="CustomDLL" SourceFile="@CMAKE_CURRENT_BINARY_DIR@/wix-custom.dll" />
 
+    <UI>
+       <Publish Dialog="ExitDialog"
+           Control="Finish"
+           Event="DoAction"
+           Value="RunDeskflow"
+           Condition= "NOT Installed" />
+    </UI>
     <CustomAction
       Id="CheckVCRedist"
       BinaryRef="CustomDLL"
@@ -51,8 +58,10 @@
 
     <CustomAction
       Id="RunDeskflow"
-      ExeCommand="Deskflow"
-      FileRef="CM_FP_deskflow.exe"
+      ExeCommand="[INSTALL_ROOT]deskflow.exe"
+      Directory="INSTALL_ROOT"
+      Execute="immediate"
+      Impersonate="yes"
       Return="asyncNoWait" />
 
     <InstallExecuteSequence>
@@ -64,10 +73,6 @@
         Action="ShowVCRedistError"
         Before="InstallInitialize"
         Condition="NOT Installed AND (NOT VC_REDIST_INSTALLED OR NOT VC_REDIST_VERSION_OK)" />
-      <Custom
-        Action="RunDeskflow"
-        OnExit="success"
-        Condition="NOT Installed" />
     </InstallExecuteSequence>
   </CPackWiXFragment>
 </CPackWiXPatch>
