build: add manpages
Manual pages got removed from synergy in #7361. This commit brings them
back. They are rudimentary and autogenerated using `help2man`, with only
a message about finding the documentation at the wiki page added. Not
much, but a lot better than nothing.

Package names added to Continuous Integration are based on these web pages:

    https://archlinux.org/packages/extra/x86_64/help2man/
    https://packages.debian.org/help2man
    https://packages.fedoraproject.org/pkgs/help2man/help2man/
    https://software.opensuse.org/package/help2man

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -146,6 +146,12 @@ SPDX-FileCopyrightText = "Deskflow Developers"
 SPDX-License-Identifier = "MIT"
 
 [[annotations]]
+path = "src/apps/res/manpage.txt"
+precedence = "override"
+SPDX-FileCopyrightText = "Deskflow Developers"
+SPDX-License-Identifier = "MIT"
+
+[[annotations]]
 path = "src/apps/res/icons/deskflow-**/**/**/**.svg"
 precedence = "override"
 SPDX-FileCopyrightText = "Kde Breeze Icons"
