--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.organization=deskflow
 sonar.projectKey=deskflow_deskflow
 sonar.sources=src/apps,src/lib
-sonar.tests=src/test
+sonar.tests=src/unittests
 sonar.exclusions=subprojects/**,build/**
-sonar.coverage.exclusions=subprojects/**,src/test/**,src/apps/deskflow-gui/**,src/apps/res/**
+sonar.coverage.exclusions=subprojects/**,src/unittests/**,src/apps/deskflow-gui/**,src/apps/res/**
 sonar.cpd.exclusions=**/*Test*.cpp
 sonar.host.url=https://sonarcloud.io
 sonar.cfamily.compile-commands=build/compile_commands.json
