build(vcpkg): Set `github-binarycache` on `vcpkg-action`

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -94,6 +94,7 @@ runs:
         extra-args: --classic
         triplet: x64-windows-release
         token: ${{ github.token }}
+        github-binarycache: true
 
     - name: Install Wix
       if: ${{ runner.os == 'Windows' }}
