--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -31,7 +31,7 @@ runs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             echo "Window not supported yet"
           elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install cmake googletest ninja openssl --quiet
+            brew install googletest openssl --quiet
           elif [ "$RUNNER_OS" == "Linux" ]; then
             if [ ${{inputs.like}} == "debian" ]; then
               apt update -qqq > /dev/null
