--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -57,7 +57,7 @@ runs:
             elif [ ${{ inputs.like }} == "arch" ]; then
               pacman -Syu --noconfirm base-devel cmake ninja \
                 gcc openssl glib2 libxtst libxkbfile gtest libei libportal \
-                qt6-base qt6-tools gtk3 tomlplusplus cli11 help2man
+                qt6-base qt6-tools qt6-svg gtk3 tomlplusplus cli11 help2man
             else
               echo "Unknown like"
             fi
