--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -454,3 +454,9 @@ jobs:
         with:
           release-version: ${{env.DESKFLOW_PACKAGE_VERSION}}
           token: ${{ secrets.WINGET_DEPLOY_TOKEN }}
+
+  generate-docs:
+    name: Generate and Deploy Documentation
+    needs: ci-passed
+    if: (github.ref == 'refs/heads/master') || (contains(github.ref, '/tags/v'))
+    uses: ./.github/workflows/docs.yml
