ci: downgrade Qt for windows to 6.8.3 to avoid random windows ci failures

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -133,16 +133,19 @@ jobs:
             runs-on: "windows-2022"
             timeout: 30
             config-args: "-G Ninja"
+            qt-version: 6.8.3
 
           - name: "macos-14-arm64"
             runs-on: "macos-14"
             timeout: 10
             config-args: "-DCMAKE_OSX_ARCHITECTURES=\"arm64\" -DCMAKE_OSX_SYSROOT=/Applications/Xcode_15.0.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"
+            qt-version: 6.9.1
 
           - name: "macos-13-x64"
             runs-on: macos-13
             timeout: 20
             config-args: "-DCMAKE_OSX_ARCHITECTURES=\"x86_64\" -DCMAKE_OSX_SYSROOT=/Applications/Xcode_15.0.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"
+            qt-version: 6.9.1
 
           - name: "debian-13-x86_64"
             runs-on: ubuntu-latest
@@ -268,7 +271,7 @@ jobs:
         id: get-deps
         uses: ./.github/actions/install-dependencies
         with:
-          qt-version: 6.9.1
+          qt-version: ${{ matrix.target.qt-version }}
           like: ${{ matrix.target.like }}
 
       - name: Get version
