feat: windows installer, Clean up user generated data on uninstall  Remove registry keys fixes #8753

--- a/deploy/windows/wix-patch.xml.in
+++ b/deploy/windows/wix-patch.xml.in
@@ -28,6 +28,13 @@
     <firewall:FirewallException Id="ClientFirewallException" Name="Deskflow Client" Program="[INSTALL_ROOT]deskflow-client.exe" Scope="any"/>
   </CPackWiXFragment>
 
+  <CPackWiXFragment Id="CM_CP_deskflow.exe">
+    <RemoveRegistryKey
+     Root="HKCU"
+     Key="Software\Deskflow"
+     Action="removeOnUninstall"/>
+  </CPackWiXFragment>
+
   <CPackWiXFragment Id="#PRODUCT">
     <Property Id="VC_REDIST_INSTALLED">
       <RegistrySearch
