chore: use arrays to group files with same override info in REUSE.toml

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -7,131 +7,46 @@ SPDX-PackageSupplier = "Deskflow Devs"
 SPDX-PackageDownloadLocation = "https://github.com/deskflow/deskflow"
 
 [[annotations]]
-path = ".github/**"
+path = [
+   ".github/**"
+ , ".clang-format"
+ , ".editorconfig"
+ , ".gitattributes"
+ , ".gitignore"
+ , "cspell.json"
+ , "sonar-project.properties"
+ , "cmake/vcpkg.json.in"
+ , "**/*.md"
+ , "doc/**"
+ , "deploy/linux/flatpak/**"
+ , "deploy/linux/org.deskflow.deskflow.metainfo.xml"
+ , "deploy/windows/wix-patch.xml.in"
+ , "src/apps/deskflow-client/deskflow-client.exe.manifest"
+ , "src/apps/deskflow-core/deskflow-core.exe.manifest"
+ , "src/apps/deskflow-server/deskflow-server.exe.manifest"
+ , "src/apps/res/manpage.txt"
+ , "src/apps/res/deskflow.plist.in"
+]
 precedence = "override"
 SPDX-FileCopyrightText = "Deskflow Developers"
 SPDX-License-Identifier = "MIT"
 
 [[annotations]]
-path = ".clang-format"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = ".editorconfig"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = ".gitattributes"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = ".gitignore"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "cspell.json"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "**/*.md"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "sonar-project.properties"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "doc/**"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "deploy/mac/dmg-background.tiff"
+path = [
+   "deploy/mac/dmg-background.tiff"
+ , "deploy/mac/dmg-volume.icns"
+ , "deploy/linux/deskflow.png"
+ , "deploy/windows/wix-banner.png"
+ , "deploy/windows/wix-dialog.png"
+ , "src/apps/res/icons/deskflow-**/apps/64/deskflow*.svg"
+ , "src/apps/res/image/welcome.png"
+ , "src/apps/res/Deskflow.icns"
+ , "src/apps/res/deskflow.ico"
+ , "src/apps/res/deskflow.qrc"
+]
 precedence = "override"
 SPDX-FileCopyrightText = "Deskflow Developers"
 SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "deploy/mac/dmg-volume.icns"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "deploy/linux/deskflow.png"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "deploy/linux/flatpak/**"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "deploy/linux/org.deskflow.deskflow.metainfo.xml"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-
-[[annotations]]
-path = "deploy/windows/wix-banner.png"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "deploy/windows/wix-dialog.png"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "deploy/windows/wix-patch.xml.in"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "src/apps/deskflow-client/deskflow-client.exe.manifest"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "src/apps/deskflow-core/deskflow-core.exe.manifest"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "src/apps/deskflow-server/deskflow-server.exe.manifest"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "src/apps/res/manpage.txt"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
 
 [[annotations]]
 path = "src/apps/res/icons/deskflow-**/**/**/**.svg"
@@ -140,55 +55,16 @@ SPDX-FileCopyrightText = "Kde Breeze Icons"
 SPDX-License-Identifier = "LGPL-2.1-only"
 
 [[annotations]]
-path = "src/apps/res/icons/deskflow-**/apps/64/deskflow*.svg"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "src/apps/res/image/welcome.png"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "src/apps/res/Deskflow.icns"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "src/apps/res/deskflow.ico"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
-path = "src/apps/res/deskflow.plist.in"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = "src/apps/res/deskflow.qrc"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only"
-
-[[annotations]]
 path = "src/apps/res/icons/deskflow-**/index.theme"
 precedence = "override"
 SPDX-FileCopyrightText = "Chris Rizzitello <sithlord48@gmail.com>"
 SPDX-License-Identifier = "LGPL-2.1-only"
 
 [[annotations]]
-path = "src/lib/gui/MainWindow.ui"
-precedence = "override"
-SPDX-FileCopyrightText = "Deskflow Developers"
-SPDX-License-Identifier = "GPL-2.0-only WITH LicenseRef-OpenSSL-Exception"
-
-[[annotations]]
-path = "src/lib/gui/dialogs/*.ui"
+path = [
+   "src/lib/gui/MainWindow.ui"
+ , "src/lib/gui/dialogs/*.ui"
+]
 precedence = "override"
 SPDX-FileCopyrightText = "Deskflow Developers"
 SPDX-License-Identifier = "GPL-2.0-only WITH LicenseRef-OpenSSL-Exception"
