build: windows deploy qt plugins in plugin folder

--- a/src/apps/deskflow-gui/CMakeLists.txt
+++ b/src/apps/deskflow-gui/CMakeLists.txt
@@ -81,6 +81,7 @@ if(WIN32)
       --no-system-d3d-compiler
       --no-quick-import
       --dir "${QT_DEPENDS_DIR}"
+      --plugindir "${QT_DEPENDS_DIR}/plugins"
       $<TARGET_FILE:${target}>
     COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
       ${QT_DEPENDS_DIR}
